--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -60,7 +60,7 @@ hr {
 	clear:both;
 }
 /* 让非ie浏览器默认也显示垂直滚动条，防止因滚动条引起的闪烁 */
-html { overflow-y: scroll; }
+html{ overflow:hidden }
 
 a:link:hover{
     color : rgb(79, 76, 212) !important;
